fixed bug where save button wasn't working in student management on firefox 3.6 and below (console.log was throwing error), lowered min width of grading and student management pages to accommodate lower real estate screens

--- a/src/main/webapp/themes/tels/default/styles/teacher/viewmystudentsstyles.css
+++ b/src/main/webapp/themes/tels/default/styles/teacher/viewmystudentsstyles.css
@@ -1,6 +1,6 @@
 .manageStudents {
 	font-size:.9em;
-	min-width:1000px;
+	min-width:700px;
 }
 
 .manageStudents #periodSelect {
